db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: app-namespace
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: db
